# Cadenas_de_Markov

./: .gitignore  CLAUDE.md  ESTRUCTURA_PROYECTO.md  GUIA_GPU.md  README.md  benchmark_cpu_gpu.csv  diagnostico_gpu.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.venv_old/: pyvenv.cfg
Primer_Parcial/: README.md
Primer_Parcial/notebooks/: metodo_gpu_final.ipynb  metodo_sistema.ipynb
Proyecto/: README.md
Proyecto/.claude/: settings.local.json
Proyecto/Expo_proyecto_final_cadenas/: main.aux  main.snm  main.tex
Proyecto/documento_escrito/: README.md
Proyecto/video/: README.md
Segundo_Parcial/: README.md
Tareas/: README.md
Tareas/Tarea_1/: EJECUTAR_NOTEBOOKS.md  OVERLEAF_INSTRUCTIONS.md  README.md  ejercicio_1a.ipynb  ejercicio_1a_hard_core.ipynb  ejercicio_1b.ipynb  ejercicio_2.ipynb  main.tex
Tareas/Tarea_2/: README.md  test_notebooks.py
Tareas/Tarea_3/: INSTRUCCIONES_GPU.md  README.md  test_gpu.py
docs/: README_PROYECTO.md
examples/: benchmark_cpu_vs_gpu.py  ejemplo_basico.py  ejemplo_metodo_sistema.py
notebooks/: benchmark_gpu_results.csv  gpu_benchmark.ipynb  matriz_tiempos_sistema_lineal.csv  matriz_tiempos_vectores_propios.csv  metodo_gpu_final.ipynb  metodo_sistema.ipynb  metodo_vectores_propios.ipynb
plantilla_informes/: .gitignore  ESTRUCTURA.md  INICIO_RAPIDO.md  README.md  compilar.bat  compilar.sh  main.tex
plantilla_informes/.claude/: settings.local.json
plantilla_informes/docs/: README_ORIGINAL.md
plantillas_informes_unal/: CONTENIDO.md  GUIA_RAPIDA.md  INDEX.md  LEEME_PRIMERO.txt  README.md  compilar.sh  main.tex  plantilla_vacia.tex
plantillas_informes_unal/plantilla_src/: config.tex
resultados/: matriz_tiempos_gpu_final.csv  matriz_tiempos_gpu_metodo1.csv  matriz_tiempos_gpu_metodo2.csv  matriz_tiempos_sistema_lineal.csv  matriz_tiempos_vectores_propios.csv
src/: __init__.py  markov_matrix.py
(+17 files in other folders)
