[project]
name = "cadenas-markov"
version = "1.0.0"
description = "Análisis computacional de cadenas de Markov - Universidad Nacional de Colombia"
authors = [
    {name = "Sergio Andrés Díaz Vera", email = "sadiazvera@unal.edu.co"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=12.0.0",  # CUDA 12.x (RTX 40/50)
]
gpu-cuda11 = [
    "cupy-cuda11x>=11.0.0",  # CUDA 11.x (RTX 30)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["Primer_Parcial/src"]
