[project]
name = "cadenas-markov"
version = "1.0.0"
description = "Análisis computacional de cadenas de Markov - Universidad Nacional de Colombia"
authors = [
    {name = "Sergio Andrés Díaz Vera", email = "seadiazve@unal.edu.co"},
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.30.0",
    "scipy>=1.15.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.3.0",
]
gpu-cuda11 = [
    "cupy-cuda11x>=13.3.0",
]
dev = [
    "pytest>=8.3.0",
    "black>=25.1.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "black>=25.1.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["Primer_Parcial/src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]
